restructured deck and wordpairs endpoints
